# DP-CUDA

./: Data  README.html  comparison.py  solve_dp.jl
CCode/: .ycm_extra_conf.py  Makefile  README
CCode/src/: dp_model.cu  dp_model.h  dynamic_programming.cpp  dynamic_programming.cu  dynamic_programming.h
CCode1/: .gitignore  Makefile
CCode1/src/: dp_model.cu  dp_model.h  dynamic_programming.cpp  dynamic_programming.cu
CCode2/: .vimrc  Diffusion_policy.tex  README
CCode2/src/: dp_model.cu  dp_model.h  dynamic_programming.cpp  dynamic_programming.cu
CUDA/: CMakeLists.txt  loadParams.cpp  loadParams.h  main.cpp  main.h  model.cu  model.h  param.json  parameters.h  paramsDefination.h  readme  readme.txt  sbatch.sh  support.cu  support.h
CUDA/rand/: RngStream.tex  test2RngStream.c  test2RngStream.res.txt  testRngStream.c
JuliaCode/: solve_dp.jl
OpenCL/: CMakeLists.txt  kernels.cl  main.c
PythonCode/: .gitignore  Makefile  README.md  config.ini  dp.py  dp_optimization.py  dp_optimization.pyx  dp_state.c  dp_state.html  dp_state.pxd  dp_state.pyx  optimization.py  requirements.txt  setup.py  state.py  test_dp_state.py
dispatch_demo/: CMakeLists.txt  main.cpp  support.cu
docs/: README.html  README.md
docs/documentation/: readme.aux  readme.fls  readme.tex  traversal1.dot  traversal2.dot  treeStruct.dot
docs/readme/: readme.fdb_latexmk  readme.tex  traversal3.dot
docs/try/: readme.md
patch_up/: README.md
